# rustman

./: .gitignore  AGENT.md  README.md  anexos.md  glosario.md  index.md  manual_axum.md  manual_devops.md  manual_rocket.md  manual_selenium.md  manual_tauri_yew.md  manual_testing_apis.md  manual_testing_rust.md  requisitos_del_manual.md
proyecto_api/: docker-compose.yml
proyecto_api/api_diesel/: Cargo.toml  Dockerfile
proyecto_api/api_diesel/src/: auth.rs  errores.rs  handlers.rs  main.rs  modelos.rs  repositorios.rs
proyecto_api/api_seaorm/: README.md
proyecto_api/sql/: init.sql
proyecto_api_axum_inventarios/: docker-compose.yml
proyecto_api_axum_inventarios/sql/: init.sql
proyecto_api_rocket_tickets/: docker-compose.yml
proyecto_api_rocket_tickets/sql/: init.sql
proyectos_capitulo/parte1/01_erp_hello/: Cargo.toml
proyectos_capitulo/parte1/02_calc_impuestos/: Cargo.toml
proyectos_capitulo/parte1/03_validador_cliente/: Cargo.toml
proyectos_capitulo/parte1/04_procesador_pedido/: Cargo.toml
proyectos_capitulo/parte1/05_modelo_erp/: Cargo.toml
proyectos_capitulo/parte1/06_estados_pedido/: Cargo.toml
proyectos_capitulo/parte1/07_catalogo_productos/: Cargo.toml
proyectos_capitulo/parte1/08_modelo_erp_modular/: Cargo.toml
proyectos_capitulo/parte2/01_conexion_mysql/: Cargo.toml
proyectos_selenium/: .gitignore  package.json
proyectos_selenium/dashboard/: index.html
proyectos_selenium/data/: clientes.json
proyectos_selenium/helpers/: screenshot.js
proyectos_selenium/pages/: LoginPage.js
proyectos_tauri_yew/: Trunk.toml  index.html
(+35 files in other folders)
