[package]
name = "api_erp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mysql = "25"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
